--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pruvit API",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=production node app.js"
+    "start": "SET NODE_ENV=production & node app.js",
+    "dev": "SET NODE_ENV=production & nodemon app.js"
   },
   "author": "",
   "license": "ISC",
